--- a/templates/mix/group.html
+++ b/templates/mix/group.html
@@ -7,7 +7,7 @@
 <script src="/static/Orbited.js"></script>
 <script>
 Orbited.settings.port = 9000;
-Orbited.settings.hostname = "{{ site.domain }}";
+Orbited.settings.hostname = "{{ hostname }}";
 TCPSocket = Orbited.TCPSocket
 </script>
 <script src="/static/stomp.js"></script>
