--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,4 @@
-<form method="post" action="?next=/music/">
+<form method="post" action="?next={{ next }}">
 <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}" />
 {{ form }}
 <input type="submit" value="login">
