--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,40 @@
-muxlist needs a design.
+<html>
+<head>
+<title>muxlist // coming soon</title>
+<link rel="stylesheet" href="/static/blueprint/screen.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="/static/blueprint/print.css" type="text/css" media="print">
+<!--[if lt IE 8]>
+  <link rel="stylesheet" href="/static/blueprint/ie.css" type="text/css" media="screen, projection">
+<![endif]-->
+</head>
+<style>
+body {
+	background:url(/static/tapedeck.jpg) center;
+}
+#main {
+	margin-top:200px;
+	width:300px;
+	margin:auto;
+	color:white;
+	text-align:center;
+}
+#attribution {
+	position: fixed;
+	right:0px;
+	bottom:0px;
+	color:white;
+}
+#attribution a {
+	color:white;
+}
+h1, h2 { color: white; }
+</style>
+<body>
+<div id="main">
+<h1>muxlist</h1>
+<h2>the realtime collaborative playlist</h2>
+<h2>coming soon</h2>
+</div>
+<span id="attribution">Picture by the talented <a href="http://www.flickr.com/people/detune/" target="_blank">Dennis Beentjes</a></span>
+</body>
+</html>
