--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -60,14 +60,7 @@ ul#errors li.good { color: white; }
 <br>
 <h2>coming soon</h2>
 <br>
-<form action="/" method="post"><label>email:</label><input name="email"> <input type="submit" value="I'm interested"></form>
-{% block below %}
-{% if form.errors %}
-<ul id="errors">
-{{ form.errors.email }}
-</ul>
-{% endif %}
-{% endblock %}
+<h2>Thanks! We'll be in touch.</h2>
 </div>
 <span id="attribution">Picture by the talented <a href="http://www.flickr.com/people/detune/" target="_blank">Dennis Beentjes</a></span>
 <script type="text/javascript">
