--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,5 +1,15 @@
+{% extends "pretty.html" %}
+
+{% block content %}
+<style>
+ul.errorlist { margin:0px; padding: 0px; }
+ul.errorlist li { margin:0px; padding: 0px; color:red; font-size:20px; list-style: none; }
+</style>
+<h1>muxlist</h1>
+<br>
 <form method="post" action="?next={{ next }}">
 <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}" />
-{{ form }}
-<input type="submit" value="login">
+{{ form.as_p }}
+<input type="submit" value="Login">
 </form>
+{% endblock %}
