--- a/templates/mix/group.html
+++ b/templates/mix/group.html
@@ -17,7 +17,7 @@ TCPSocket = Orbited.TCPSocket
 <script>
 var stomp;
 var comet_ready;
-var show_progress = false;
+var full_upload = false;
 $(document).ready(function () {
 	comet_ready = function() {
 		$.post('./current/', function (data) { stomp.onmessageframe({'body': data});});
@@ -69,17 +69,15 @@ $(document).ready(function () {
 {% if user.is_authenticated %}
 	$("#everything").dropzone({ url: '/music/begin_slice/' });
 	$.fn.dropzone.fileUploadProgressUpdated = function (index, file, progress) {
-		console.log(progress)
+		if ((progress == 100) && (full_upload == true)) {
+			$('#uploading').html('Processing...')
+		} else {
+			$('#upload_inner').css('width', progress + '%')
+		}
 	};
 
 	$.fn.dropzone.uploadStarted = function () {
-		if (show_progress) {
-			$('#uploading').html('')
-			$('<div id="upload_outer"><div id="upload_inner"></div><div>').appendTo('#uploading')
-			show_progress = false;
-		} else {
-			$('#uploading').html('<img src="/static/throbber.gif"> Uploading...');
-		}
+		$('#uploading').html('<div id="upload_outer"><div id="upload_inner"></div></div>')
 	}
 
 	$.fn.dropzone.uploadFinishedResponse = function (xhr) {
@@ -95,12 +93,12 @@ $(document).ready(function () {
 			if (xhr.status == 402) {
 				$.fn.setURL('/music/middle_slice/');
 				var size = file.fileSize;
+				full_upload = false;
 				$.fn.startXHRSlice(file, xhr.upload.fileIndex + 1, Math.floor(size/2)-50, Math.floor(size/2)+50);
 				return;
 			} else if (xhr.status == 404) {
 				$.fn.setURL('/music/upload/');
-				show_progress = true;
-				console.log('showing progress')
+				full_upload = true;
 				$.fn.startXHRAll(file, xhr.upload.fileIndex + 1);
 				return;
 			} else if (xhr.status == 500) {
@@ -112,6 +110,7 @@ $(document).ready(function () {
 			if (xhr.status == 402) {
 				$.fn.setURL('/music/end_slice/');
 				var size = file.fileSize;
+				full_upload = false
 				$.fn.startXHRSlice(file, xhr.upload.fileIndex + 1, size-100, size);
 				return;
 			} else if (xhr.status == 404) {
@@ -162,7 +161,6 @@ function send_chat_enter(event) {
 	}
 }
 $(window).error(function (event) {
-	console.log("error: ", event);
 });
 </script>
 <style>
@@ -170,7 +168,7 @@ body { margin: 0; padding: 0; }
 h1, h2, h3 { margin: 0px; }
 #progress_outer { height:10px; width:200px; border:1px solid; background:white; }
 #progress_inner { height:10px; background: black; width: 0%; }
-#upload_outer { height:10px; width:200px; border:1px solid; background:white; }
+#upload_outer { height:10px; width:200px; border:1px solid; background:white; float:right;}
 #upload_inner { height:10px; background: black; width: 0%; }
 ul { margin:0px; padding: 0px; }
 li { margin:0px; padding: 0px; list-style:none; }
